Bug 691104 - pdfwrite emits garbage in the XMP metadata when DOCINFO pdfmarks contain UTF-16BE text strings
Summary: pdfwrite emits garbage in the XMP metadata when DOCINFO pdfmarks contain UTF-...
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: master
Hardware: PC Windows NT
: P4 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-11 06:44 UTC by Ken Sharp
Modified: 2011-09-18 21:46 UTC (History)
0 users

See Also:
Customer: 1
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ken Sharp 2010-02-11 06:44:56 UTC
A DOCINFO pdfmark which contains UTF-16BE text strings for (eg) Author emits
garbage in the XMP metadata when producing PDF/A.

In addition the parsing of PostScript escapes ('/(', '/)', '//' '/xxx') is
incorrect in that escaped octal numbers consume the character following the
octal digits, and the other escapes simply aren't recognised.
Comment 1 Ken Sharp 2010-02-11 08:31:07 UTC
Fixed in revision 10743, patch here:

http://ghostscript.com/pipermail/gs-cvs/2010-February/010489.html
Comment 2 Marcos H. Woehrmann 2011-09-18 21:46:13 UTC
Changing customer bugs that have been resolved more than a year ago to closed.