Fix (pdfwrite) bug #691104 "pdfwrite emits garbage in the XMP metadata when DOCINFO pdfmarks contain UTF-16BE text strings"

There were several problems. Firstly the undoing of PostScript string escapes was wrong,
Octal escapes consumed too many characters, and several escape sequences weren't
recognised.

Secondly the XMP emission didn't expect to receive UTF-16BE strings and didn't convert
them to UTF-8 for inclusion in the metadata.

This patch fixes the broken octal escapes, adds teh unprocessed escapes and checks the
DOCINFo strings before sending to XMP. If they include the UTF-16BE Byte Order Mark
then convert the strings to UTF-8.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10743 a1074d23-0009-0410-80fe-cf8c14f379e6